vaultwarden/service.yml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden-service
spec:
  selector:
    app: vaultwarden
  ports:
    - protocol: TCP
      port: 11001
      targetPort: 11001
